# therapy-ops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RUNBOOK_ACORN_V1.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  cli.py
app/adapters/: __init__.py  acorn_adapter_ui.py  simplepractice_adapter_ui.py
app/domain/: __init__.py  models.py
app/jobs/: __init__.py  acorn_daily_send.py  purge_runtime.py  scheduler.py  simplepractice_auth_check.py  simplepractice_probe.py  simplepractice_session.py  tasks.py
app/orchestration/: send.py
app/reporting/: summary.py  triage.py
app/utils/: idempotency.py  identity.py  logging.py  phone.py  runtime_paths.py
app/workflows/: dispatch.py
docs/: AGENT_HANDOFF_2026-02-19.md  validation.md
docs/samples/: acorn_recipients.example.json  summary_confirm_send.json  summary_dry_run.json  triage_confirm_send.md  triage_dry_run.md
ops/launchd/: com.therapyops.acorn-preflight.plist  com.therapyops.acorn-send.plist
scripts/automation/: install_launchd.sh  run_daily_automation.py  send_outlook_report.applescript  uninstall_launchd.sh
tests/: .gitkeep  conftest.py  test_acorn_daily_send_cli.py  test_cli.py  test_daily_automation_runner.py  test_dispatch_workflow.py  test_identity.py  test_integration_smoke.py  test_orchestration_send.py  test_purge_runtime.py  test_runtime_paths.py  test_scheduler_and_job_config.py  test_simplepractice_auth_check.py  test_simplepractice_service_filter.py  test_unit_behaviors.py
tests/e2e/: test_daily_send_dry_run.py
